Bug 298498 - some polygon geometries disappear when dateline is visible
Summary: some polygon geometries disappear when dateline is visible
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: 1.4 (KDE 4.9)
Assignee: marble-bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-20 17:52 UTC by Bernhard Beschow
Modified: 2012-05-20 11:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard Beschow 2012-04-20 17:52:05 UTC
Since commit https://projects.kde.org/projects/kde/kdeedu/marble/repository/revisions/635dc5dbe08e2cb47093f35e4a23c3461e970956 the canadian borders disappear when the globe is not fully visible but the dateline is visible.

Reproducible: Always

Steps to Reproduce:
1. Open ${marble_source}/data/mwdbii/PCANPROV.PNT
2. Zoom out such that the whole planet is visible (Canadian borders should be visible)
2. Zoom in and rotate globe such that the area of Canada is visible and the view crosses the dateline (overview map showing two rectangles)
Actual Results:  
The borders of Canada disappear.

Expected Results:  
The borders of Canada should be visible.
Comment 1 Dennis Nienhüser 2012-05-20 11:15:34 UTC
Git commit b296eb97811c57be01eacfbbe7d6bf98447d4064 by Dennis Nienhüser.
Committed on 20/05/2012 at 12:45.
Pushed by nienhueser into branch 'master'.

Handle viewport IDL crossing when calculating visible items.
Related: bug 299959
Note that commit 635dc5db mentioned in bug 298498#c0 did not cause the
bug itself, but only revealed it: Previously the bounding box was only
set in setLineString(), but not in the ctor which took the linestring
as well. Hence when using the ctor alone (which is what we do), the
bbox was not set to the correct one, but an empty one. Now the default
ctor of the bbox returns a sphere sized bbox, hence seemingly making it
work (hiding both the bbox calculation bug as well as the negative
performance implications). To me that's another argument to change the
default ctor of GeoDataLatLon*Box.

M  +17   -0    src/lib/GeoGraphicsScene.cpp

http://commits.kde.org/marble/b296eb97811c57be01eacfbbe7d6bf98447d4064